--- a/Ejercicio.html
+++ b/Ejercicio.html
@@ -12,6 +12,6 @@
 <p>La comida mexicana es parte de nuestra auntentica cultura y tradicion, es amor y religiosidad, es creacion y es
  "Patrimonio intangible de la humanidad" (declarada por UNESCO en 2010).</p></div>
  <h3><b><em>FOOTER</em></b></h3>
- <p>Copryright c LosDanzantes.com</p>
+ <p>Copyright c LosDanzantes.com</p>
 </body>
 </html>
